src/objects/Int_Facility_Feature__c.object
<CustomObject>
    <description>Int Facility Feature</description>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Facility Name</description>
        <label>Facility Name</label>
        <referenceTo>Int_Facility__c</referenceTo>
        <relationshipLabel>Int Facility Features</relationshipLabel>
        <relationshipName>Int_Facility_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Number__c</fullName>
        <description>Facility Number</description>
        <label>Facility Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Source_System__c</fullName>
        <description>Facility Source System</description>
        <label>Facility Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Name__c</fullName>
        <description>Feature Name</description>
        <label>Feature Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_AlphaNumeric__c</fullName>
        <description>Value AlphaNumeric</description>
        <label>Value AlphaNumeric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_DateTime__c</fullName>
        <description>Value DateTime</description>
        <label>Value DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value_Numeric__c</fullName>
        <description>Value Numeric</description>
        <label>Value Numeric</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <label>Int Facility Feature</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FFI-{0000000000}</displayFormat>
        <label>Facility Feature Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Facility Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>